Bulk finished, construction debris in progress

--- a/csr_docs_v3/html/contract_documents/contract_one_sl.html
+++ b/csr_docs_v3/html/contract_documents/contract_one_sl.html
@@ -468,7 +468,7 @@
               </div>
               <div class="row">
                 <div class="col-lg-12"><a name="Bulks" title="Bulks" id="bulk"></a>
-                  <h4 class="rs-h4-small">Bulk</h4>
+                  <h4 class="rs-h4-small">Bulk<span id="bulk-not-offered-notice"></span></h4>
                   <div class="container-fluid service-section">
                     <div class="collapsing-section" id="bulk-offered-toggle">
                       <div class="row data-line">
@@ -504,8 +504,8 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-12"><a name="Bulks" title="Bulks" id="construction"></a>
-                  <h4 class="rs-h4-small">Construction Debris</h4>
+                <div class="col-lg-12"><a name="construction" title="Construction" id="construction"></a>
+                  <h4 class="rs-h4-small">Construction Debris<span id="con-not-offered-notice"></span></h4>
                   <div class="container-fluid service-section">
                     <div class="collapsing-section" id="con-offered-toggle">
                       <div class="row data-line">
@@ -596,7 +596,7 @@
       >
     <div class="row">
       <div class="col-lg-12">Last updated: 
-        <!-- #BeginDate format:Am1a -->June 1, 2017 4:07 PM<!-- #EndDate --> 
+        <!-- #BeginDate format:Am1a -->June 2, 2017 1:43 PM<!-- #EndDate --> 
       </div>
     </div>
     <div class="row">
