--- a/csr_docs_v3/index.html
+++ b/csr_docs_v3/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>CSR v.2 Stylesheet</title>
 
+<!-- Memo to test Git Desktop -->
 
 <!-- The following libraries are for Bootstrap 3.3.7 and jQuery 3.2.1 from trusted CDN sources. Final versions will want to use a locally sourced copy of these libraries -->
 
@@ -214,7 +215,7 @@
       >
     <div class="row">
       <div class="col-lg-12">Last updated: 
-        <!-- #BeginDate format:Am1a -->May 19, 2017 11:26 AM<!-- #EndDate -->
+        <!-- #BeginDate format:Am1a -->June 14, 2017 8:11 AM<!-- #EndDate -->
       </div>
     </div>
     <div class="row">
